--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@tonisanchez.dev/init-service",
   "author": "Toni Sánchez (https://tonisanchez.dev)",
-  "version": "v1.0.0",
+  "version": "v1.0.2",
   "type": "module",
   "scripts": {
+    "init-demo": "cd demo && yarn && cd ..",
     "build-demo": "cd demo && yarn build && cd ..",
     "service": "node index.js './src/services'",
     "demo": "cd demo && yarn start && cd .."
